# Aplikacja-kryptograficzna-test

./: Jenkinsfile  JenkinsfileRelease  README.md
Aplikacja/: CMakeLists.txt  Dockerfile  main.cpp  operations.cpp  operations.h  test_euklides.cpp  test_powmd.cpp  test_proba.cpp
